Updated index page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,11 +2,11 @@
 	<nav class="nav__mobile"></nav>
 	<div class="container">
 		<div class="navbar__inner">
-			<a href="#" class="navbar__logo">Logo</a>
+			<a href="#" class="navbar__logo">TrainTracker</a>
 			<nav class="navbar__menu">
 				<ul>
-					<li><a href="#">Option</a></li>
-					<li><a href="#">Option 2</a></li>
+					<li><a href="/">Home</a></li>
+					<li><a href="/Dashboard">Dashboard</a></li>
 				</ul>
 			</nav>
 			<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -24,9 +24,9 @@
 		<div class="container">
 			<div class="page__header__content">
 				<div class="page__header__content__inner" id='navConverter'>
-					<h1 class="page__header__title">Multi-purpose page</h1>
-					<p class="page__header__text">This is mostly a simple layout, rather than a complete page unlike the others.
-						However this is a really useful starting point for anything you want to create.</p>
+					<img src="~/images/main.svg" height="256px" />
+					<h1 class="page__header__title">The New Chicago Metro Map</h1>
+					<p class="page__header__text">Interactive public transportation map that track trains real time. Data is provided by Chicago Transit Authority (CTA).</p>
 				</div>
 			</div>
 		</div>
