--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -2,11 +2,11 @@
 	<nav class="nav__mobile"></nav>
 	<div class="container">
 		<div class="navbar__inner">
-			<a href="#" class="navbar__logo">Logo</a>
+			<a href="#" class="navbar__logo">TrainTracker</a>
 			<nav class="navbar__menu">
 				<ul>
-					<li><a href="#">Option</a></li>
-					<li><a href="#">Option 2</a></li>
+					<li><a href="/">Home</a></li>
+					<li><a href="/Dashboard">Dashboard</a></li>
 				</ul>
 			</nav>
 			<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
