--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -49,6 +49,10 @@
 				<div class="text-container">
 					<h3 class="page__main__title">This is the main area</h3>
 					<p>Write or do whatever you want here!</p>
+					<div class="img-magnifier-container">
+						<!-- See magnify.js -->
+						<img id="myimage" src="~/images/test.png" style="width:300px; height:auto;">
+					</div>
 				</div>
 			</div>
 		</div>
