--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,11 +27,13 @@
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="~/js/default.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/magnify.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
         <script src="~/js/default.min.js" asp-append-version="true"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/magnify.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
