styles and jquery added in

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 				<div class="page__header__content__inner" id='navConverter'>
 					<img src="~/images/main.svg" height="256px" />
 					<h1 class="page__header__title">The New Chicago Metro Map</h1>
-					<p class="page__header__text">Interactive public transportation map that track trains real time. Data is provided by Chicago Transit Authority (CTA).</p>
+					<p class="page__header__text">Welcome! TrainTracker is an interactive public transportation map that track trains real time. Data is provided by Chicago Transit Authority (CTA).</p>
 				</div>
 			</div>
 		</div>
