--- a/wwwroot/css/default.css
+++ b/wwwroot/css/default.css
@@ -1391,3 +1391,11 @@ select {
         border-bottom: 1px solid #6C63FF;
         transform: none;
         transition: none; } }
+::selection {
+  background-color:rgba(0,150,255,.3);
+  text-shadow:none;
+}
+.system-font-stack {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu,
+    Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
