--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -51,7 +51,8 @@
 					<p>Write or do whatever you want here!</p>
 					<div class="img-magnifier-container">
 						<!-- See magnify.js -->
-						<img id="myimage" src="~/images/test.png" style="width:300px; height:auto;">
+						<!-- Mess with the magnifying glass in site.css - .img-magnifier-glass -->
+						<img id="myimage" src="~/images/test.png" style="width:500px; height:auto;">
 					</div>
 				</div>
 			</div>
