--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,36 +26,88 @@
 				<div class="page__header__content__inner" id='navConverter'>
 					<img src="~/images/main.svg" height="256px" />
 					<h1 class="page__header__title">The New Chicago Metro Map</h1>
-					<p class="page__header__text">Welcome! TrainTracker is an interactive public transportation map that track trains real time. Data is provided by Chicago Transit Authority (CTA).</p>
+					<p class="page__header__text">Welcome! TrainTracker is an interactive public transportation map that track trains
+						real time. Data is provided by Chicago Transit Authority (CTA).</p>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- Page content -->
-<div class="page">
+<!-- Steps -->
+<div class="steps landing__section">
 	<div class="container">
-		<div class="page__inner">
-			<div class="page__menu">
-				<ul class="vMenu">
-					<li><a href="#" class="vMenu--active">Active page</a></li>
-					<li><a href="#">Second page</a></li>
-					<li><a href="#">Third page</a></li>
-					<li><a href="#">Fourth page</a></li>
-					<li><a href="#">Fifth page</a></li>
-				</ul>
+		<h2>What is TrainTracker good for?</h2>
+		<p>Here's what we can think of, but surely creative people will surprise us.</p>
+	</div>
+	<div class="container">
+		<div class="steps__inner">
+			<div class="step">
+				<div class="step__media">
+					<img src="~/images/programmer.svg" class="step__image">
+				</div>
+				<h4>Planning Your Routes</h4>
+				<p class="step__text">A landing page for your open source projects. Present your solution, easily create docs.</p>
 			</div>
-			<div class="page__main">
-				<div class="text-container">
-					<h3 class="page__main__title">This is the main area</h3>
-					<p>Write or do whatever you want here!</p>
-					<div class="img-magnifier-container">
-						<!-- See magnify.js -->
-						<!-- Mess with the magnifying glass in site.css - .img-magnifier-glass -->
-						<img id="myimage" src="~/images/test.png" style="width:500px; height:auto;">
+			<div class="step">
+				<div class="step__media">
+					<img src="~/images/construction.svg" class="step__image">
+				</div>
+				<h4>Avoiding Delays</h4>
+				<p class="step__text">A website for your own freebies. Let the world download and use your artwork.</p>
+			</div>
+			<div class="step">
+				<div class="step__media">
+					<img src="~/images/brainstorm.svg" class="step__image">
+				</div>
+				<h4>Analyzing Traffic</h4>
+				<p class="step__text">A great starting point for your web application. Focus on your idea and execution.</p>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- Expanded sections -->
+<div class="expanded landing__section">
+	<div class="container">
+		<div class="expanded__inner">
+			<div class="expanded__media">
+				<img src="~/images/browser.svg" class="expanded__image">
+			</div>
+			<div class="expanded__content">
+				<h2 class="expanded__title">Intuitive dashboard with easy-to-find controls</h2>
+				<p class="expanded__text">Evie brings you the pages you'll need and the structure to create your own, without a
+					learning curve. It is minimal and mostly styles plain elements. There are only a few classes you'll need to know
+					but nothing to disrupt your preferred coding style.</p>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- Call To Action -->
+<div class="cta cta--reverse">
+	<div class="container">
+		<div class="cta__inner">
+			<h2 class="cta__title">Get started now</h2>
+			<p class="cta__sub cta__sub--center">Navigate to the dashboard and start tracking trains instantly.</p>
+			<a href="/Dashboard" class="button button__accent">Demo TrainTracker</a>
+		</div>
+	</div>
+</div>
+<!-- Footer -->
+<div class="footer footer--dark">
+	<div class="container">
+		<div class="footer__inner">
+			<a href="#" class="footer__textLogo">TrainTracker</a>
+			<div class="footer__data">
+				<div class="footer__data__item">
+					<div class="footer__row">
+						Created for visualizing CTA traffic using <a href="https://www.transitchicago.com/traintracker/" target="_blank"
+						 class="footer__link">cta train tracker api</a>
+					</div>
+				</div>
+				<div class="footer__data__item">
+					<div class="footer__row">Special thanks to <a href="https://undraw.co" target="_blank" class="footer__link">unDraw</a>
+						for the art and support
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
