--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -35,6 +35,11 @@
 					<p>Write or do whatever you want here!</p>
 				</div>
 			</div>
+			<div class="img-magnifier-container">
+				<!-- See magnify.js -->
+				<!-- Mess with the magnifying glass in site.css - .img-magnifier-glass -->
+				<img id="myimage" src="~/images/test.png" style="width:500px; height:auto;">
+			</div>
 		</div>
 	</div>
 </div>
