--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -10,7 +10,7 @@
 /* The actual magnifying glass */
 .img-magnifier-glass {
     position: absolute;
-    border: 3px solid #000;
+    border: 3px solid rgba(226, 226, 226, .4);
     border-radius: 50%;
     cursor: none;
     /*Set the size of the magnifier glass:*/
