--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,10 +9,12 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/css/default.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="~/css/default.min.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </environment>
 </head>
 
@@ -24,14 +26,25 @@
     </div>
 
     <environment include="Development">
+
+        
+
+        
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="~/js/default.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        
+        
+        
     </environment>
     <environment exclude="Development">
+
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
         <script src="~/js/default.min.js" asp-append-version="true"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+
+        
+    
     </environment>
 
     @RenderSection("Scripts", required: false)
