--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 	<nav class="nav__mobile"></nav>
 	<div class="container">
 		<div class="navbar__inner">
-			<a href="#" class="navbar__logo">TrainTracker</a>
+			<a href="/" style="display: flex; align-items: center;" class="navbar__logo"><img height="42px" src="~/images/logo.svg">TrainTracker</a>
 			<nav class="navbar__menu">
 				<ul>
 					<li><a href="/">Home</a></li>
@@ -24,11 +24,11 @@
 		<div class="container">
 			<div class="page__header__content">
 				<div class="page__header__content__inner" id='navConverter'>
-					<img src="~/images/main.svg" height="256px" />
 					<h1 class="page__header__title">The New Chicago Metro Map</h1>
 					<p class="page__header__text">Welcome! TrainTracker is an interactive public transportation map that track trains
 						real time. Data is provided by Chicago Transit Authority (CTA).</p>
-				</div>
+					</div>
+					<img src="~/images/main.svg" height="256px" />
 			</div>
 		</div>
 	</div>
