--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -17,9 +17,9 @@
 	</div>
 </div>
 <!-- Page content -->
-<div class="app">
-	<div class="container">
-		<div class="app__inner">
+<div class="app app-custom">
+	<div class="container-dashboard">
+		<div class="app__inner" style="width: 100%;">
 			<div class="app__menu">
 				<ul class="vMenu">
 					<li><a href="#" class="vMenu--active">Active page</a></li>
@@ -33,12 +33,8 @@
 				<div class="text-container">
 					<h3 class="app__main__title">This is the main area</h3>
 					<p>Write or do whatever you want here!</p>
-					<div class="img-magnifier-container">
-						<!-- See magnify.js -->
-						<!-- Mess with the magnifying glass in site.css - .img-magnifier-glass -->
-						<img id="myimage" src="~/images/test.png" style="width:500px; height:auto;">
-					</div>
 				</div>
+				<img id="myimage" src="~/images/test.png" style="width:100%; height:auto;">
 			</div>
 		</div>
 	</div>
