--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,19 +1,13 @@
 * {
     box-sizing: border-box;
 }
-
-/* The div that contains the image you want to magnify */
-.img-magnifier-container {
-    position: relative;
+.container-dashboard {
+    display: flex;
+    margin: 0 40px;
 }
-
-/* The actual magnifying glass */
-.img-magnifier-glass {
-    position: absolute;
-    border: 3px solid rgba(226, 226, 226, .4);
-    border-radius: 50%;
-    cursor: none;
-    /*Set the size of the magnifier glass:*/
-    width: 200px;
-    height: 200px;
+.app-custom {
+    background-color: #f5f6fa;
+}
+.map-container {
+    flex-grow: 1;
 }
