--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -21,7 +21,10 @@
 	<div class="container-dashboard">
 		<div class="app__inner" style="width: 100%;">
 			<div class="app__menu">
-				<ul class="vMenu">
+				<div class="vMenu vMenuTop">
+					<li><a href="#" class="vMenu--active">Active page</a></li>
+				</div>
+				<ul class="vMenu vMenuCustom">
 					<li><a href="#" class="vMenu--active">Active page</a></li>
 					<li><a href="#">Second page</a></li>
 					<li><a href="#">Third page</a></li>
@@ -30,11 +33,10 @@
 				</ul>
 			</div>
 			<div class="app__main">
-				<div class="text-container">
-					<h3 class="app__main__title">This is the main area</h3>
-					<p>Write or do whatever you want here!</p>
+				<div class="vMenu vMenuTop" style="width: 100%;">
+					<li><a href="#" class="vMenu--active">Active page</a></li>
 				</div>
-				<img id="myimage" src="~/images/test.png" style="width:100%; height:auto;">
+				<img id="myimage" src="~/images/test.png" style="width:100%; height:auto; margin-top: 15px;">
 			</div>
 		</div>
 	</div>
