--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -22,9 +22,10 @@
 		<div class="app__inner" style="width: 100%;">
 			<div class="app__menu">
 				<div class="vMenu vMenuTop">
-					<li><a href="#" class="vMenu--active">Active page</a></li>
+					<p class="etched-text">Display: <span style="color: darkslategray;">All Lines</span></p>
 				</div>
 				<ul class="vMenu vMenuCustom">
+					<p class="etched-text" style="color: darkslategray;">Select an option:</p>
 					<li><a href="#" class="vMenu--active">Active page</a></li>
 					<li><a href="#">Second page</a></li>
 					<li><a href="#">Third page</a></li>
