--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7,6 +7,7 @@
 }
 .app-custom {
     background-color: #f5f6fa;
+    padding-bottom: 0;
 }
 .map-container {
     flex-grow: 1;
@@ -27,3 +28,15 @@
     border: 1px #dee2ed solid;
     box-shadow: 1px 1px 1px 1px #e5e9f2;
 }
+.map {
+    overflow-y: scroll;
+    margin-top: 15px;
+    resize: vertical;
+}
+.etched-text {
+    text-shadow: 0 2px white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #b8bec5;
+    margin: 0;
+  }
