--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -21,21 +21,58 @@
 	<div class="container-dashboard">
 		<div class="app__inner" style="width: 100%;">
 			<div class="app__menu">
-				<div class="vMenu vMenuTop">
-					<p class="etched-text">Display: <span style="color: darkslategray;">All Lines</span></p>
+				<div id='LineSelect'>
+					<div class="vMenu vMenuTop">
+						<p class="etched-text">Display: <span style="color: darkslategray;">{{ line }}</span></p>
+					</div>
+					<ul class="vMenu vMenuCustom">
+						<p class="etched-text" style="color: darkslategray;">Select an option:</p>
+						<li style="display: flex;">
+							<div>
+								<input value="All Lines" checked name="radiovalue" type="radio" id="AllLines" v-model="line" />
+								<label for="AllLines">All Lines</label>
+								<input value="Blue Line" name="radiovalue" type="radio" id="BlueLine" v-model="line" />
+								<label for="BlueLine">Blue Line</label>
+								<input value="Brown Line" name="radiovalue" type="radio" id="BrownLine" v-model="line" />
+								<label for="BrownLine">Brown Line</label>
+								<input value="Green Line" name="radiovalue" type="radio" id="GreenLine" v-model="line" />
+								<label for="GreenLine">Green Line</label>
+								<input value="Orange Line" name="radiovalue" type="radio" id="OrangeLine" v-model="line" />
+								<label for="OrangeLine">Orange Line</label>
+							</div>
+							<div>
+								<input value="Pink Line" name="radiovalue" type="radio" id="PinkLine" v-model="line" />
+								<label for="PinkLine">Pink Line </label>
+								<input value="Purple Line" name="radiovalue" type="radio" id="PurpleLine" v-model="line" />
+								<label for="PurpleLine">Purple Line</label>
+								<input value="Red Line" name="radiovalue" type="radio" id="RedLine" v-model="line" />
+								<label for="RedLine">Red Line</label>
+								<input value="Yellow Line" name="radiovalue" type="radio" id="YellowLine" v-model="line" />
+								<label for="YellowLine">Yellow Line</label>
+							</div>
+						</li>
+					</ul>
 				</div>
 				<ul class="vMenu vMenuCustom">
-					<p class="etched-text" style="color: darkslategray;">Select an option:</p>
+					<p class="etched-text" style="color: darkslategray;">Set Alerts:</p>
 					<li><a href="#" class="vMenu--active">Active page</a></li>
 					<li><a href="#">Second page</a></li>
 					<li><a href="#">Third page</a></li>
 					<li><a href="#">Fourth page</a></li>
 					<li><a href="#">Fifth page</a></li>
 				</ul>
+				<div class="vMenu vMenuCustom">
+					<p class="etched-text" style="color: darkslategray;">Magnify:</p>
+					<label class="switch">
+						<input type="checkbox">
+						<span class="slider round"></span>
+					</label>
+				</div>
 			</div>
 			<div class="app__main">
 				<div class="vMenu vMenuTop" style="width: 100%;">
-					<li><a href="#" class="vMenu--active">Active page</a></li>
+					<marquee class="etched-text" style="color: red; font-size: 1.2rem" scrollamount="3">News and Alerts will be
+						here......</marquee>
 				</div>
 				<img id="myimage" src="~/images/test.png" style="width:100%; height:auto; margin-top: 15px;">
 			</div>
