--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -47,21 +47,21 @@
 					<img src="~/images/programmer.svg" class="step__image">
 				</div>
 				<h4>Planning Your Routes</h4>
-				<p class="step__text">A landing page for your open source projects. Present your solution, easily create docs.</p>
+				<p class="step__text">A data visual of CTA train traffic for your travels. Plan out your routes like the old days.</p>
 			</div>
 			<div class="step">
 				<div class="step__media">
 					<img src="~/images/construction.svg" class="step__image">
 				</div>
 				<h4>Avoiding Delays</h4>
-				<p class="step__text">A website for your own freebies. Let the world download and use your artwork.</p>
+				<p class="step__text">A website for avoiding the pitfalls of signal clearance. Let the world seek and enjoy seemless transportation.</p>
 			</div>
 			<div class="step">
 				<div class="step__media">
 					<img src="~/images/brainstorm.svg" class="step__image">
 				</div>
 				<h4>Analyzing Traffic</h4>
-				<p class="step__text">A great starting point for your web application. Focus on your idea and execution.</p>
+				<p class="step__text">A great starting point for your data science application. Focus on finding cool patterns in traffic and executing your idea.</p>
 			</div>
 		</div>
 	</div>
@@ -75,9 +75,9 @@
 			</div>
 			<div class="expanded__content">
 				<h2 class="expanded__title">Intuitive dashboard with easy-to-find controls</h2>
-				<p class="expanded__text">Evie brings you the pages you'll need and the structure to create your own, without a
-					learning curve. It is minimal and mostly styles plain elements. There are only a few classes you'll need to know
-					but nothing to disrupt your preferred coding style.</p>
+				<p class="expanded__text">TrainTracker brings you the pages you'll need to start tracking trains and the structure to view CTA status on your own, without a
+					learning curve. It is minimal and features simple-to-use UI. There are only a few settings you'll need to configure, 
+					but nothing to disrupt the ease of tracking a desired train.</p>
 			</div>
 		</div>
 	</div>
