--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -78,12 +78,13 @@
 				<div class="text-container">
 					<h3 class="app__main__title">This is the main area</h3>
 					<p>Write or do whatever you want here!</p>
-					<div class="img-magnifier-container">
-						<!-- See magnify.js -->
+                    <div id="map" style="width: 100%; min-height: 400px;"></div>
+					<!-- <div class="img-magnifier-container">
+						See magnify.js -->
 						<!-- Mess with the magnifying glass in site.css - .img-magnifier-glass -->
 						<!-- Train Station Overlay -->
 						<!-- <div class="train-overlay" style="position: absolute"></div> -->
-						<!-- Path Overlay -->
+						<!-- Path Overlay
 						<div class="path-overlay" style="position: absolute">
 							<svg width='500' height='700'>
 								<path class="blue-line" d="M28,217 32,215 43,224 63,214 90,214 150,214 172,217 198,233 208,233 257,285 259,309 342,376 357,387 372,387 372,405 238,405 225,412 212,410 198,409 190,413 120,403"
@@ -118,13 +119,13 @@
 							<div class="pink" style="position: absolute; top: -0.5rem; left: -0.5rem; width: 1rem; height: 1rem; background-color: pink"></div>
 						</div>
 						<img id="myimage" src="~/images/test.png" style="width:500px; height:auto;">
-					</div>
+					</div> -->
 				</div>
 				<div class="vMenu vMenuTop" style="width: 100%;">
 					<marquee class="etched-text" style="color: red; font-size: 1.2rem" scrollamount="3">News and Alerts will be
 						here......</marquee>
 				</div>
-				<img id="myimage" src="~/images/test.png" style="width:100%; height:auto; margin-top: 15px;">
+				<!-- <img id="myimage" src="~/images/test.png" style="width:100%; height:auto; margin-top: 15px;"> -->
 			</div>
 		</div>
 	</div>
@@ -132,6 +133,156 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="~/lib/animejs/anime.min.js"></script>
 <script>
+    function initMap() {
+        var codingDojo = {lat: 41.897184, lng: -87.635235}
+        var map = new google.maps.Map(
+            document.getElementById('map'), {zoom: 12, center: codingDojo});
+        var marker = new google.maps.Marker({position: codingDojo, map: map});
+
+        var YellowLineCoordinates = [
+            {lat: 42.019068, lng: -87.672825, name: "Howard"},
+            {lat: 42.019860, lng: -87.673855},
+            {lat: 42.020984, lng: -87.675883},
+            {lat: 42.021247, lng: -87.676580},
+            {lat: 42.021581, lng: -87.678072},
+            {lat: 42.021693, lng: -87.679187},
+            {lat: 42.026846, lng: -87.747583, name: "Oakton-Skokie"},
+            {lat: 42.039597, lng: -87.752307, name: "Dempster-Skokie"}
+        ];
+
+        var PurpleLineCoordinates = [
+            {lat: 42.073605, lng: -87.690923, name: "Linden"},
+            {lat: 42.063918, lng: -87.685612, name: "Central"},
+            {lat: 42.058241, lng: -87.683427, name: "Noyes"},
+            {lat: 42.054233, lng: -87.683655, name: "Foster"},
+            {lat: 42.048401, lng: -87.683483, name: "Davis"},
+            {lat: 42.041686, lng: -87.681639, name: "Dempster"},
+            {lat: 42.033511, lng: -87.679561, name: "Main"},
+            {lat: 42.027577, lng: -87.678361, name: "South Blvd"},
+            {lat: 42.018844, lng: -87.672690, name: "Howard"},
+            {lat: 41.965343, lng: -87.657954, name: "Wilson"},
+            {lat: 41.939732, lng: -87.653440, name: "Belmont"},
+            {lat: 41.936289, lng: -87.653273, name: "Wellington"},
+            {lat: 41.932848, lng: -87.653147, name: "Diversey"},
+            {lat: 41.925400, lng: -87.652937, name: "Fullerton"},
+            {lat: 41.918265, lng: -87.652642, name: "Armitage"},
+            {lat: 41.910379, lng: -87.638764, name: "Sedgwick"},
+            {lat: 41.895980, lng: -87.635736, name: "Chicago"},
+            {lat: 41.888874, lng: -87.633970, name: "Merchandise Mart"},
+            {lat: 41.885743, lng: -87.631489, name: "Clark/Lake"},
+            {lat: 41.882611, lng: -87.626148, name: "Washington/Wabash"},
+            {lat: 41.879574, lng: -87.626148, name: "Adams/Wabash"},
+            {lat: 41.876882, lng: -87.628798, name: "Harold Washington Library-State/Van Buren"},
+            {lat: 41.876882, lng: -87.631741, name: "LaSalle/VanBuren"},
+            {lat: 41.878729, lng: -87.633802, name: "Quincy"},
+            {lat: 41.882612, lng: -87.633885, name: "Washington/Wells"},
+            {lat: 41.888874, lng: -87.633970, name: "Merchandise Mart"},
+        ];
+
+        var BrownLineCoordinates = [
+            {lat: 41.967640, lng: -87.712863, name: "Kimball"},
+            {lat: 41.966077, lng: -87.708699, name: "Kedzie"},
+            {lat: 41.966201, lng: -87.701592, name: "Francisco"},
+            {lat: 41.966201, lng: -87.694105, name: "Rockwell"},
+            {lat: 41.966235, lng: -87.688450, name: "Western"},
+            {lat: 41.966425, lng: -87.678751, name: "Damen"},
+            {lat: 41.961733, lng: -87.675234, name: "Montrose"},
+            {lat: 41.954490, lng: -87.675017, name: "Irving Park"},
+            {lat: 41.947245, lng: -87.674805, name: "Addison"},
+            {lat: 41.943796, lng: -87.663520, name: "South Port"},
+            {lat: 41.939732, lng: -87.653440, name: "Belmont"},
+            {lat: 41.936289, lng: -87.653273, name: "Wellington"},
+            {lat: 41.932848, lng: -87.653147, name: "Diversey"},
+            {lat: 41.925400, lng: -87.652937, name: "Fullerton"},
+            {lat: 41.918265, lng: -87.652642, name: "Armitage"},
+            {lat: 41.910379, lng: -87.638764, name: "Sedgwick"},
+            {lat: 41.895980, lng: -87.635736, name: "Chicago"},
+            {lat: 41.888874, lng: -87.633970, name: "Merchandise Mart"},
+            {lat: 41.885743, lng: -87.631489, name: "Clark/Lake"},
+            {lat: 41.882611, lng: -87.626148, name: "Washington/Wabash"},
+            {lat: 41.879574, lng: -87.626148, name: "Adams/Wabash"},
+            {lat: 41.876882, lng: -87.628798, name: "Harold Washington Library-State/Van Buren"},
+            {lat: 41.876882, lng: -87.631741, name: "LaSalle/VanBuren"},
+            {lat: 41.878729, lng: -87.633802, name: "Quincy"},
+            {lat: 41.882612, lng: -87.633885, name: "Washington/Wells"},
+            {lat: 41.888874, lng: -87.633970, name: "Merchandise Mart"},
+        ];
+
+        var RedLineCoordinates = [
+            {lat: 42.018844, lng: -87.672690, name: "Howard"},
+            {lat: 42.015950, lng: -87.669168, name: "Jarvis"},
+            {lat: 42.008331, lng: -87.665907, name: "Moyse"},
+            {lat: 42.001158, lng: -87.661145, name: "Loyola"},
+            {lat: 41.993816, lng: -87.659212, name: "Granville"},
+            {lat: 41.990279, lng: -87.659068, name: "Thorndale"},
+            {lat: 41.983516, lng: -87.658878, name: "Bryn Mawr"},
+            {lat: 41.978022, lng: -87.658730, name: "Berwyn"},
+            {lat: 41.973427, lng: -87.658581, name: "Argyle"},
+            {lat: 41.969090, lng: -87.658532, name: "Lawernce"},
+            {lat: 41.965343, lng: -87.657954, name: "Wilson"},
+            {lat: 41.953796, lng: -87.654948, name: "Sheridan"},
+            {lat: 41.947472, lng: -87.653662, name: "Addison"},
+            {lat: 41.939732, lng: -87.653440, name: "Belmont"},
+            {lat: 41.925400, lng: -87.652937, name: "Fullerton"},
+            {lat: 41.910581, lng: -87.649064, name: "North/Clybourn"},
+            {lat: 41.903903, lng: -87.632131, name: "Clark/Division"},
+            {lat: 41.891682, lng: -87.628073, name: "Grand/State"},
+            {lat: 41.880681, lng: -87.627741, name: "Monroe"},
+            {lat: 41.878214, lng: -87.627640, name: "Jackson"},
+            {lat: 41.874217, lng: -87.627497, name: "Harrison"},
+            {lat: 41.867434, lng: -87.627436, name: "Roosevelt"},
+            {lat: 41.853730, lng: -87.631156, name: "Cermak-Chinatwon"},
+            {lat: 41.831329, lng: -87.630669, name: "Sox-35th"},
+            {lat: 41.810328, lng: -87.631034, name: "47th"},
+            {lat: 41.795794, lng: -87.631197, name: "Garfield"},
+            {lat: 41.780922, lng: -87.630994, name: "63rd St"},
+            {lat: 41.769020, lng: -87.625830, name: "69th"},
+            {lat: 41.750663, lng: -87.625218, name: "79th"},
+            {lat: 41.735567, lng: -87.624786, name: "87th"},
+            {lat: 41.722429, lng: -87.624462, name: "95th/Dan Ryan"}
+        ];
+
+
+        var YellowLine = new google.maps.Polyline({
+            path: YellowLineCoordinates,
+            geodesic: false,
+            strokeColor: "yellow",
+            strokeOpacity: 0.8,
+            strokeWeight: 3
+        })
+
+        var PurpleLine = new google.maps.Polyline({
+            path: PurpleLineCoordinates,
+            geodesic: false,
+            strokeColor: "purple",
+            strokeOpacity: 0.8,
+            strokeWeight: 3
+        })
+
+        var BrownLine = new google.maps.Polyline({
+            path: BrownLineCoordinates,
+            geodesic: false,
+            strokeColor: "brown",
+            strokeOpacity: 0.8,
+            strokeWeight: 3
+        })
+
+        var RedLine = new google.maps.Polyline({
+            path: RedLineCoordinates,
+            geodesic: false,
+            strokeColor: "red",
+            strokeOpacity: 0.8,
+            strokeWeight: 3
+        })
+
+        YellowLine.setMap(map);
+        PurpleLine.setMap(map);
+        BrownLine.setMap(map);
+        RedLine.setMap(map);
+    }
+
+
+
 	function sanX(x) {
 		return 1 - ((x - 41.7) / 0.4) + 0.02;
 	}
@@ -294,4 +445,6 @@
 		loop: true,
 		easing: 'linear'
 	});
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmMtYz3uY9Di4Fhyj18uWAg3EWE5e5W3s&callback=initMap">
 </script>
