Added tips section

--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -168,6 +168,7 @@
 				<ul>
 					<li><a href="/">Home</a></li>
 					<li><a href="/Dashboard">Dashboard</a></li>
+					<li><a href="/Tips">Tips</a></li>
 				</ul>
 			</nav>
 			<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
