--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
 				<ul>
 					<li><a href="/">Home</a></li>
 					<li><a href="/Dashboard">Dashboard</a></li>
+					<li><a href="/Tips">Tips</a></li>
 				</ul>
 			</nav>
 			<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -112,3 +113,4 @@
 			</div>
 		</div>
 	</div>
+</div>
