--- a/Views/Home/Tips.cshtml
+++ b/Views/Home/Tips.cshtml
@@ -3,12 +3,12 @@
     <nav class="nav__mobile"></nav>
     <div class="container">
         <div class="navbar__inner">
-                <a href="/" style="display: flex; align-items: center;" class="navbar__logo"><img height="42px" src="~/images/logo.svg">TrainTracker</a>
+            <a href="/" style="display: flex; align-items: center;" class="navbar__logo"><img height="42px" src="~/images/logo.svg">TrainTracker</a>
             <nav class="navbar__menu">
                 <ul>
                     <li><a href="/">Home</a></li>
-					<li><a href="/Dashboard">Dashboard</a></li>
-					<li><a href="/Tips">Tips</a></li>
+                    <li><a href="/Dashboard">Dashboard</a></li>
+                    <li><a href="/Tips">Tips</a></li>
                 </ul>
             </nav>
             <div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg"
@@ -20,7 +20,7 @@
     </div>
 </div>
 <!-- Authentication pages -->
-<div class="auth">
+<div class="auth" style="height: 100vh;">
     <div class="container">
         <div class="auth__inner">
             <div class="auth__media">
@@ -33,11 +33,20 @@
                     <label>Name</label>
                     <input type="text" name="email" id='email' placeholder="Humpty Dumpty">
                     <label>Comment</label>
-                    <input type="text" name="password" id='password' placeholder="More trains please"
-                        autocomplete="off">
+                    <input type="text" name="password" id='password' placeholder="More trains please" autocomplete="off">
                     <button type='submit' class="button button__accent">Post</button>
                     <h6 class="left-align">Help us improve TrainTracker. 😉</h6>
                 </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Comment pages -->
+<div class="landing__section">
+    <div class="container">
+        <div class="expanded__inner">
+            <h2 class="expanded__title">Comments</h2>
+            <div class="expanded__content">
             </div>
         </div>
     </div>
