--- a/Views/Home/Tips.cshtml
+++ b/Views/Home/Tips.cshtml
@@ -50,9 +50,12 @@
                 <h2 class="expanded__title">Comments</h2>
                 @{
                     foreach (Tip tip in ViewBag.Tips) {
-                        <div class = "tip">
-                            <h3>@tip.Name</h3>
-                            <p>@tip.Comment</p>
+                        <div class = "tip" style="width: 100%; max-width: 100%;">
+                            <div class="tip-head" style="display: flex; align-items: center;">
+                                <img src='~/images/profile.svg' height='42px'> 
+                                <h3 style="display: inline; margin: 0; margin-left: 5px;">@tip.Name - <span style="font-size: 16px;">@tip.Date.ToString("MMMM dd, yyyy H:mm tt")</span></h3>
+                            </div>
+                            <p style="margin-left: 40px; max-width: 80vw; word-wrap: break-word;">@tip.Comment</p>
                         </div>
                     }
                 }
