--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -92,9 +92,15 @@
     resize: vertical;
 }
 .etched-text {
-    text-shadow: 0 2px white;
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #b8bec5;
-    margin: 0;
-  }
+  text-shadow: 0 2px white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #b8bec5;
+  margin: 0;
+}
+.tip {
+    background-color: white;
+    border-radius: 30px;
+    padding: 10px;
+    margin: 20px 0;
+}
