--- a/Views/Home/dashboard.cshtml
+++ b/Views/Home/dashboard.cshtml
@@ -90,6 +90,7 @@
 
 					
 					<p>Write or do whatever you want here!</p>
+					<button id="trains" class="btn">Map Trains</button>
 					<div id="map" style="width: 100%; min-height: 400px;"></div>
 					<!-- <div class="img-magnifier-container">
 						See magnify.js -->
@@ -140,7 +141,13 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="~/lib/animejs/anime.min.js"></script>
+
 <script>
+	$(document).ready(function(){
+		$("#trains").click(function(){
+			initMap();
+		});
+	});
 	var purpleline=[];
 	var yellowline=[];
 	var redline=[];
@@ -295,7 +302,7 @@
 		var map = new google.maps.Map(
 			document.getElementById('map'), { zoom: 12, center: codingDojo }
 			);
-		var marker = new google.maps.Marker({ position: codingDojo, map: map });
+		// var marker = new google.maps.Marker({ position: codingDojo, map: map });
 		google.maps.event.addListener(map, 'click', function (event) {
                     // Add marker
                     //addMarker({ coords: event.latLng });
@@ -307,64 +314,64 @@
 				var latitude = parseFloat(purpleline[i].lat);
 				var longitude = parseFloat(purpleline[i].long);
 				var point = {coords: { lat: latitude, lng: longitude },
-                			 iconImage: 'https://img00.deviantart.net/f079/i/2005/119/7/0/dance_little_man__dance__by_xduckeh.gif',
-                			 content: 'worked'}
+                			 iconImage: 'http://kstyles.altervista.org/publish/publish/web/images/2train.png',
+                			 content: '<h4>Purple Line: ' + purpleline[i].run + '</h4><p>Next Stop: ' + purpleline[i].nextStopName + '</p><p>Estimated Arrival Time ' + purpleline[i].arrivalTime + '</p><p>Destination: ' + purpleline[i].routeEnd + '</p>' }
 				markArr.push(point);
 				}
 			 for(var i = 0; i<yellowline.length; i++){
 				var latitude = parseFloat(yellow[i].lat);
 				var longitude = parseFloat(yellowline[i].long);
 				var point = {coords: { lat: latitude, lng: longitude },
-                			 iconImage: 'https://img00.deviantart.net/f079/i/2005/119/7/0/dance_little_man__dance__by_xduckeh.gif',
-                			 content: 'worked'}
+                			 iconImage: 'http://kstyles.altervista.org/publish/publish/web/images/2train.png',
+                			 content: '<h4>Yellow Line: ' + yellowline[i].run + '</h4><p>Next Stop: ' + yellowline[i].nextStopName + '</p><p>Estimated Arrival Time ' + yellowline[i].arrivalTime + '</p><p>Destination: ' + yellowline[i].routeEnd + '</p>' }
 				markArr.push(point);
 				}
 			 for(var i = 0; i<redline.length; i++){
 				var latitude = parseFloat(redline[i].lat);
 				var longitude = parseFloat(redline[i].long);
 				var point = {coords: { lat: latitude, lng: longitude },
-                			 iconImage: 'https://img00.deviantart.net/f079/i/2005/119/7/0/dance_little_man__dance__by_xduckeh.gif',
-                			 content: 'worked'}
+                			 iconImage: 'http://kstyles.altervista.org/publish/publish/web/images/2train.png',
+                			 content: '<h4>Red Line: ' + redline[i].run + '</h4><p>Next Stop: ' + redline[i].nextStopName + '</p><p>Estimated Arrival Time ' + redline[i].arrivalTime + '</p><p>Destination: ' + redline[i].routeEnd + '</p>' }
 				markArr.push(point);
 				}
 			 for(var i = 0; i<brownline.length; i++){
 				var latitude = parseFloat(brownline[i].lat);
 				var longitude = parseFloat(brownline[i].long);
 				var point = {coords: { lat: latitude, lng: longitude },
-                			 iconImage: 'https://img00.deviantart.net/f079/i/2005/119/7/0/dance_little_man__dance__by_xduckeh.gif',
-                			 content: 'worked'}
+                			 iconImage: 'http://kstyles.altervista.org/publish/publish/web/images/2train.png',
+                			 content: '<h4>Brown Line: ' + brownline[i].run + '</h4><p>Next Stop: ' + brownline[i].nextStopName + '</p><p>Estimated Arrival Time ' + brownline[i].arrivalTime + '</p><p>Destination: ' + brownline[i].routeEnd + '</p>' }
 				markArr.push(point);
 				}  
 			 for(var i = 0; i<blueline.length; i++){
 				var latitude = parseFloat(blueline[i].lat);
 				var longitude = parseFloat(blueline[i].long);
 				var point = {coords: { lat: latitude, lng: longitude },
-                			 iconImage: 'https://img00.deviantart.net/f079/i/2005/119/7/0/dance_little_man__dance__by_xduckeh.gif',
-                			 content: 'worked'}
+                			 iconImage: 'http://kstyles.altervista.org/publish/publish/web/images/2train.png',
+                			 content: '<h4>Blue Line: ' + blueline[i].run + '</h4><p>Next Stop: ' + blueline[i].nextStopName + '</p><p>Estimated Arrival Time ' + blueline[i].arrivalTime + '</p><p>Destination: ' + blueline[i].routeEnd + '</p>' }
 				markArr.push(point);
 				}  
 			 for(var i = 0; i<greenline.length; i++){
 				var latitude = parseFloat(greenline[i].lat);
 				var longitude = parseFloat(greenline[i].long);
 				var point = {coords: { lat: latitude, lng: longitude },
-                			 iconImage: 'https://img00.deviantart.net/f079/i/2005/119/7/0/dance_little_man__dance__by_xduckeh.gif',
-                			 content: 'worked'}
+                			 iconImage: 'http://kstyles.altervista.org/publish/publish/web/images/2train.png',
+                			 content: '<h4>Green Line: ' + greenline[i].run + '</h4><p>Next Stop: ' + greenline[i].nextStopName + '</p><p>Estimated Arrival Time ' + greenline[i].arrivalTime + '</p><p>Destination: ' + greenline[i].routeEnd + '</p>' }
 				markArr.push(point);
 				} 
 			 for(var i = 0; i<orangeline.length; i++){
 				var latitude = parseFloat(orangeline[i].lat);
 				var longitude = parseFloat(orangeline[i].long);
 				var point = {coords: { lat: latitude, lng: longitude },
-                			 iconImage: 'https://img00.deviantart.net/f079/i/2005/119/7/0/dance_little_man__dance__by_xduckeh.gif',
-                			 content: 'worked'}
+                			 iconImage: 'http://kstyles.altervista.org/publish/publish/web/images/2train.png',
+                			 content: '<h4>Orange Line: ' + orangeline[i].run + '</h4><p>Next Stop: ' + orangeline[i].nextStopName + '</p><p>Estimated Arrival Time ' + orangeline[i].arrivalTime + '</p><p>Destination: ' + orangeline[i].routeEnd + '</p>' }
 				markArr.push(point);
 				}  
 			 for(var i = 0; i<pinkline.length; i++){
 				var latitude = parseFloat(pinkline[i].lat);
 				var longitude = parseFloat(pinkline[i].long);
 				var point = {coords: { lat: latitude, lng: longitude },
-                			 iconImage: 'https://img00.deviantart.net/f079/i/2005/119/7/0/dance_little_man__dance__by_xduckeh.gif',
-                			 content: 'worked'}
+                			 iconImage: 'http://kstyles.altervista.org/publish/publish/web/images/2train.png',
+                			 content: '<h4>Pink Line: ' + pinkline[i].run + '</h4><p>Next Stop: ' + pinkline[i].nextStopName + '</p><p>Estimated Arrival Time ' + pinkline[i].arrivalTime + '</p><p>Destination: ' + pinkline[i].routeEnd + '</p>' }
 				markArr.push(point);
 				}         
 			
@@ -381,7 +388,7 @@
 
                 //   // Check for customicon
                 if (props.iconImage) {
-                    //     // Set icon image
+					
                     tmarker.setIcon(props.iconImage);
                 }
 
@@ -709,6 +716,6 @@
 	google.maps.event.addDomListener(window, 'load', initMap);
 
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmMtYz3uY9Di4Fhyj18uWAg3EWE5e5W3s&callback=initMap">
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmMtYz3uY9Di4Fhyj18uWAg3EWE5e5W3s">
 
 </script>
