arrival times add

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -104,3 +104,28 @@
     padding: 10px;
     margin: 20px 0;
 }
+
+.text-container {
+    width: 100%;
+}
+
+.arrival {
+    padding: 1px 1%;
+    margin-top: 3%;
+}
+
+.arrival h2 {
+    font-size: 2.5em;
+    margin-top: 0;
+    opacity: 1;
+}
+
+.arrival span {
+    float: right;
+    margin-right: 10%;
+}
+
+.arrival p {
+    opacity: 1;
+    color: darkgray;
+}
